# StrataORM

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  install.sh
core/includes/: datatypes.hpp  db_config.hpp  db_engine_adapters.hpp  models.hpp
core/src/: datatypes.cpp  db_engine_adapters.cpp  dbquery.cpp  models.cpp
examples/include/: models.hpp
examples/insert/: CMakeLists.txt  insert.cpp  messages.json  users.json
examples/models/: CMakeLists.txt  models.cpp
examples/queries/: CMakeLists.txt  queries.cpp
orm++/: datatypes.hpp  db_adapters.hpp  db_engine_adapters.hpp
src/: datatypes.cpp  db_adapters.cpp  db_engine_adapters.cpp  models.cpp
strata/: datatypes.hpp  db_adapters.hpp  db_config.hpp  models.hpp  version.hpp.in
